# TDB

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  zensical.toml
.agents/skills/wiki-maintainer/: SKILL.md
.claude/skills/wiki-maintainer/: SKILL.md
.github/workflows/: docs.yml
docs/: index.md
docs/ai-for-da/: tools.md
docs/analytics-engineering/: ADLC.md  AE-foundation.md  data-modeling.md  dbt.md  glossary.md  index.md  materials.md  process.md
docs/assets/stylesheets/: widgets.css
docs/dap/: analyze.md  ask.md
docs/dba/: case-study.md  fundamentals.md  glossary.md  index.md  materials.md  snippets.md
docs/de/: case-study.md  fundamentals.md  glossary.md  index.md  materials.md  snippets.md
docs/resources/: index.md  misc.md  tutorials.md
docs/sql/: database-engine.md  index.md  snippets.md
