[project]
name = "TDB"
version = "1.0.0"
description = "The Data Bible: a knowledge base covering database administration, data engineering, analytics engineering, and data analysis"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "zensical>=0.0.50",
]
